--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=http://ec2-18-227-24-251.us-east-2.compute.amazonaws.com/b4
+REACT_APP_API_URL=https://b335-cruz-capstone2.onrender.com
